Color Customization Changes to be committed: 	modified:   src/utils/scss/_variables.scss 	modified:   tailwind.config.ts

--- a/src/utils/scss/_variables.scss
+++ b/src/utils/scss/_variables.scss
@@ -5,5 +5,13 @@ $avenir: "avenir";
 $akshar: "akshar";
 
 // Colors
-$dark: #171717;
-$light: #ffffff;
+
+$dark-primary: #121212;
+$dark-secondary: #272727;
+
+$light-primary: #FFFFFF;
+$light-secondary: #F2F2F2;
+
+$danger: #EE0000;
+$success: #03C03C;
+$warning: #FFD700;
