Hero | Description | TechStack
On branch v3.0
Changes to be committed:
  - modified:   package.json
  - modified:   public/assets/img/male-profile.jpg
  - new file:   public/assets/img/shape/description.svg
  - new file:   public/assets/img/shape/grid.svg
  - modified:   public/assets/img/tech-stack/backend/expressjs.svg
  - modified:   public/assets/img/tech-stack/database/oracle.svg
  - modified:   public/assets/img/tech-stack/devops/github.svg
  - modified:   public/assets/img/tech-stack/devops/linux.svg
  - modified:   public/assets/img/tech-stack/frontend/framer.svg
  - modified:   public/assets/img/tech-stack/frontend/radix-ui.svg
  - modified:   public/assets/img/tech-stack/frontend/wix.svg
  - new file:   src/app/(v3.0)/layout.tsx
  - new file:   src/app/(v3.0)/page.tsx
  - modified:   src/app/globals.scss
  - modified:   src/app/layout.tsx
  - deleted:    src/app/page.tsx
  - new file:   src/components/v3/Banner.tsx
  - new file:   src/components/v3/Description.tsx
  - new file:   src/components/v3/Hero.tsx
  - new file:   src/components/v3/Profile.tsx
  - new file:   src/components/v3/TechStack.tsx
  - renamed:    public/data/portfolio.json -> src/data/portfolio.json
  - renamed:    public/data/social.json -> src/data/social.json
  - renamed:    public/data/tech-stack.json -> src/data/tech-stack.json
  - new file:   src/utils/scss/_customization.scss
  - modified:   src/utils/scss/_scroll-bar.scss

Signed-off-by: Mohan Arjunan <mohan.arjunan@finsurge.tech>

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,8 @@
 @use "../utils/scss/scroll-bar";
 @use "../utils/scss/fonts";
+@use "../utils/scss/customization";
+
+@use 'node_modules/vanilla-infinite-marquee/infinite-marquee.scss';
 
 @tailwind base;
 @tailwind components;
@@ -7,7 +10,9 @@
 
 
 * {
-  @apply font-akshar;
-  font-weight: normal;
-  font-size: 18px;
+  @apply font-akshar text-lg font-normal;
+}
+
+body {
+  @apply bg-black;
 }
