--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
+@import '../../node_modules/vanilla-infinite-marquee/infinite-marquee.css';
+
 @config "../../tailwind.config.ts";
 
 @import "../lib/css/fonts.css";
 @import "../lib/css/theme.css";
 
 body {
-  @apply bg-surface-100;
+  @apply bg-surface-300;
 }
