--- a/src/lib/css/base.css
+++ b/src/lib/css/base.css
@@ -1,3 +1,3 @@
 * {
-  @apply scrollbar scrollbar-thumb-dark-500 scrollbar-track-transparent;
+  @apply scrollbar-thin scrollbar-thumb-dark-600 scrollbar-track-transparent;
 }
